chore: update typerwriter dependency to latest

--- a/package.json
+++ b/package.json
@@ -51,7 +51,7 @@
     "ts-jest": "^26.4.1",
     "ts-node": "^8.1.0",
     "tsconfig-paths": "^3.8.0",
-    "typewriter": "^7.0.0-33"
+    "typewriter": "^7.1.0"
   },
   "dependencies": {
     "@hapi/joi": "^15.1.1",
