Add Swift output support (#142)
* rename ios to objc to prep for swift support

* corrected template path

* Finished up swift export

* Fixed tests

* fixed array serialization

* updated generated file

* fixed circleci setup

* ref cocoapods 1.8.4

* Added window property to example app

* addressed comments from Colin K

* updated objc podfile

* removed window reference to get back to known behavior

Co-authored-by: Brandon Sneed <brandon.sneed@segment.com>

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -130,7 +130,7 @@ jobs:
           name: Install Cocoapods
           command: |
             cd tests/e2e/ios-objc
-            pod check --verbose || pod install --deployment
+            pod check --verbose || pod install --repo-update
       - save_cache:
           paths:
             - tests/e2e/ios-objc/Pods
@@ -161,7 +161,7 @@ jobs:
           name: Install Cocoapods
           command: |
             cd tests/e2e/ios-objc
-            pod check --verbose || pod install --deployment
+            pod check --verbose || pod install --repo-update
       - save_cache:
           paths:
             - tests/e2e/ios-objc/Pods
@@ -192,7 +192,7 @@ jobs:
           name: Install Cocoapods
           command: |
             cd tests/e2e/ios-swift
-            pod check --verbose || pod install --deployment
+            pod check --verbose || pod install --repo-update
       - save_cache:
           paths:
             - tests/e2e/ios-swift/Pods
@@ -223,7 +223,7 @@ jobs:
           name: Install Cocoapods
           command: |
             cd tests/e2e/ios-swift
-            pod check --verbose || pod install --deployment
+            pod check --verbose || pod install --repo-update
       - save_cache:
           paths:
             - tests/e2e/ios-swift/Pods
