--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
   "devDependencies": {
     "@types/analytics-node": "^3.1.1",
     "@types/got": "^9.6.7",
-    "@types/hapi__joi": "^17.1.6",
+    "@types/joi": "^14.3.4",
     "@types/jest": "^24.0.11",
     "@types/jest-expect-message": "^1.0.0",
     "@types/js-yaml": "^3.12.1",
@@ -54,7 +54,7 @@
     "typewriter": "^7.0.0-33"
   },
   "dependencies": {
-    "@hapi/joi": "^17.1.1",
+    "joi": "^17.2.1",
     "analytics-node": "3.4.0-beta.1",
     "figures": "^3.0.0",
     "fuse.js": "^3.4.5",
