--- a/package.json
+++ b/package.json
@@ -23,58 +23,58 @@
     "node": ">=0.10.18"
   },
   "devDependencies": {
-    "@types/analytics-node": "^3.1.1",
-    "@types/got": "^9.6.7",
+    "@types/analytics-node": "^3.1.3",
+    "@types/got": "^9.6.11",
     "@types/hapi__joi": "^15.0.2",
     "@types/jest": "^24.0.11",
     "@types/jest-expect-message": "^1.0.0",
-    "@types/js-yaml": "^3.12.1",
-    "@types/json-schema": "^7.0.3",
+    "@types/js-yaml": "^3.12.5",
+    "@types/json-schema": "^7.0.6",
     "@types/json-stable-stringify": "^1.0.32",
-    "@types/lodash": "^4.14.123",
-    "@types/node": "^11.13.6",
-    "@types/prettier": "^1.16.3",
-    "@types/prompts": "2.0.0",
+    "@types/lodash": "^4.14.164",
+    "@types/node": "^14.14.6",
+    "@types/prettier": "^2.1.5",
+    "@types/prompts": "2.0.9",
     "@typescript-eslint/eslint-plugin": "^1.6.0",
     "@typescript-eslint/parser": "^1.6.0",
-    "copyfiles": "^2.1.0",
+    "copyfiles": "^2.4.0",
     "eslint": "^5.16.0",
     "eslint-config-prettier": "^4.1.0",
     "eslint-plugin-prettier": "^3.0.1",
     "eslint-plugin-react": "^7.14.2",
-    "husky": "^2.1.0",
+    "husky": "^4.3.0",
     "jest": "^24.7.1",
     "jest-expect-message": "^1.0.2",
-    "lint-staged": "^8.1.7",
-    "np": "^5.0.1",
-    "snyk": "^1.250.0",
+    "lint-staged": "^10.5.1",
+    "np": "^7.0.0",
+    "snyk": "^1.421.1",
     "ts-jest": "^24.0.2",
-    "ts-node": "^8.1.0",
-    "tsconfig-paths": "^3.8.0",
-    "typewriter": "^7.0.0-33"
+    "ts-node": "^9.0.0",
+    "tsconfig-paths": "^3.9.0",
+    "typewriter": "^7.2.1"
   },
   "dependencies": {
     "@hapi/joi": "^15.1.1",
-    "analytics-node": "3.4.0-beta.1",
+    "analytics-node": "3.4.0-beta.3",
     "figures": "^3.0.0",
-    "fuse.js": "^3.4.5",
-    "got": "^9.6.0",
-    "handlebars": "4.7.6",
-    "ink": "^2.5.0",
-    "ink-link": "^1.0.0",
+    "fuse.js": "^6.4.3",
+    "got": "^11.8.0",
+    "handlebars": "^4.7.6",
+    "ink": "^3.0.8",
+    "ink-link": "^2.0.0",
     "ink-select-input": "^3.1.2",
-    "ink-spinner": "^3.0.1",
-    "ink-text-input": "^3.2.1",
+    "ink-spinner": "^4.0.1",
+    "ink-text-input": "^4.0.1",
     "js-yaml": "^3.13.1",
     "json-stable-stringify": "^1.0.1",
     "latest-version": "^5.1.0",
     "lodash": "4.17.20",
     "node-machine-id": "^1.1.12",
-    "prettier": "^1.17.0",
-    "react": "^16.9.0",
-    "semver": "^6.3.0",
-    "sort-keys": "^3.0.0",
-    "typescript": "^3.4.5",
+    "prettier": "^2.1.2",
+    "react": "^17.0.1",
+    "semver": "^7.3.2",
+    "sort-keys": "^4.1.0",
+    "typescript": "^4.0.5",
     "yargs": "^16.0.3"
   },
   "files": [
