--- a/package.json
+++ b/package.json
@@ -26,8 +26,8 @@
     "@types/analytics-node": "^3.1.1",
     "@types/got": "^9.6.7",
     "@types/hapi__joi": "^15.0.2",
-    "@types/jest": "^24.0.11",
-    "@types/jest-expect-message": "^1.0.0",
+    "@types/jest": "^26.0.15",
+    "@types/jest-expect-message": "^1.0.3",
     "@types/js-yaml": "^3.12.1",
     "@types/json-schema": "^7.0.3",
     "@types/json-stable-stringify": "^1.0.32",
@@ -42,16 +42,16 @@
     "eslint-config-prettier": "^4.1.0",
     "eslint-plugin-prettier": "^3.0.1",
     "eslint-plugin-react": "^7.14.2",
-    "husky": "^2.1.0",
-    "jest": "^24.7.1",
+    "husky": "^4.3.0",
+    "jest": "^26.6.2",
     "jest-expect-message": "^1.0.2",
-    "lint-staged": "^8.1.7",
-    "np": "^5.0.1",
-    "snyk": "^1.250.0",
-    "ts-jest": "^24.0.2",
-    "ts-node": "^8.1.0",
-    "tsconfig-paths": "^3.8.0",
-    "typewriter": "^7.0.0-33"
+    "lint-staged": "^10.5.1",
+    "np": "^7.0.0",
+    "snyk": "^1.422.0",
+    "ts-jest": "^26.4.3",
+    "ts-node": "^9.0.0",
+    "tsconfig-paths": "^3.9.0",
+    "typewriter": "^7.2.1"
   },
   "dependencies": {
     "@hapi/joi": "^15.1.1",
@@ -68,14 +68,18 @@
     "js-yaml": "^3.13.1",
     "json-stable-stringify": "^1.0.1",
     "latest-version": "^5.1.0",
-    "lodash": "4.17.20",
+    "lodash": "^4.17.20",
     "node-machine-id": "^1.1.12",
     "prettier": "^1.17.0",
     "react": "^16.9.0",
     "semver": "^6.3.0",
     "sort-keys": "^3.0.0",
-    "typescript": "^3.4.5",
+    "typescript": "^3.8.0",
     "yargs": "^16.0.3"
+  },
+  "resolutions": {
+    "kind-of": "^6.0.3",
+    "mixin-deep": "^2.0.1"
   },
   "files": [
     "dist",
