--- a/package.json
+++ b/package.json
@@ -35,13 +35,13 @@
     "@types/node": "^11.13.6",
     "@types/prettier": "^1.16.3",
     "@types/prompts": "2.0.0",
-    "@typescript-eslint/eslint-plugin": "^1.6.0",
-    "@typescript-eslint/parser": "^1.6.0",
+    "@typescript-eslint/eslint-plugin": "^4.9.0",
+    "@typescript-eslint/parser": "^4.9.0",
     "copyfiles": "^2.1.0",
-    "eslint": "^5.16.0",
-    "eslint-config-prettier": "^4.1.0",
-    "eslint-plugin-prettier": "^3.0.1",
-    "eslint-plugin-react": "^7.14.2",
+    "eslint": "^7.14.0",
+    "eslint-config-prettier": "^6.15.0",
+    "eslint-plugin-prettier": "^3.1.4",
+    "eslint-plugin-react": "^7.21.5",
     "husky": "^2.1.0",
     "jest": "^26.6.3",
     "jest-expect-message": "^1.0.2",
@@ -51,7 +51,7 @@
     "ts-jest": "^26.4.4",
     "ts-node": "^8.1.0",
     "tsconfig-paths": "^3.8.0",
-    "typewriter": "^7.0.0-33"
+    "typewriter": "^7.3.0"
   },
   "dependencies": {
     "@hapi/joi": "^15.1.1",
@@ -114,13 +114,10 @@
         }
       ],
       "@typescript-eslint/explicit-function-return-type": "off",
-      "@typescript-eslint/no-use-before-define": [
-        "error",
-        "nofunc"
-      ],
       "@typescript-eslint/no-namespace": "off",
       "@typescript-eslint/no-non-null-assertion": "off",
-      "@typescript-eslint/interface-name-prefix": "off"
+      "@typescript-eslint/interface-name-prefix": "off",
+      "@typescript-eslint/no-empty-function": "off"
     },
     "overrides": [
       {
