--- a/package.json
+++ b/package.json
@@ -26,8 +26,8 @@
     "@types/analytics-node": "^3.1.1",
     "@types/got": "^9.6.7",
     "@types/hapi__joi": "^15.0.2",
-    "@types/jest": "^24.0.11",
-    "@types/jest-expect-message": "^1.0.0",
+    "@types/jest": "^26.0.15",
+    "@types/jest-expect-message": "^1.0.3",
     "@types/js-yaml": "^3.12.1",
     "@types/json-schema": "^7.0.3",
     "@types/json-stable-stringify": "^1.0.32",
@@ -35,23 +35,23 @@
     "@types/node": "^11.13.6",
     "@types/prettier": "^1.16.3",
     "@types/prompts": "2.0.0",
-    "@typescript-eslint/eslint-plugin": "^1.6.0",
-    "@typescript-eslint/parser": "^1.6.0",
+    "@typescript-eslint/eslint-plugin": "^4.9.0",
+    "@typescript-eslint/parser": "^4.9.0",
     "copyfiles": "^2.1.0",
-    "eslint": "^5.16.0",
-    "eslint-config-prettier": "^4.1.0",
-    "eslint-plugin-prettier": "^3.0.1",
-    "eslint-plugin-react": "^7.14.2",
+    "eslint": "^7.14.0",
+    "eslint-config-prettier": "^6.15.0",
+    "eslint-plugin-prettier": "^3.1.4",
+    "eslint-plugin-react": "^7.21.5",
     "husky": "^2.1.0",
-    "jest": "^24.7.1",
+    "jest": "^26.6.3",
     "jest-expect-message": "^1.0.2",
     "lint-staged": "^8.1.7",
     "np": "^5.0.1",
     "snyk": "^1.250.0",
-    "ts-jest": "^24.0.2",
+    "ts-jest": "^26.4.4",
     "ts-node": "^8.1.0",
     "tsconfig-paths": "^3.8.0",
-    "typewriter": "^7.0.0-33"
+    "typewriter": "^7.3.0"
   },
   "dependencies": {
     "@hapi/joi": "^15.1.1",
@@ -74,8 +74,8 @@
     "react": "^16.9.0",
     "semver": "^6.3.0",
     "sort-keys": "^3.0.0",
-    "typescript": "^3.4.5",
-    "yargs": "^16.0.3"
+    "typescript": "^4.1.2",
+    "yargs": "^16.1.1"
   },
   "files": [
     "dist",
@@ -114,13 +114,10 @@
         }
       ],
       "@typescript-eslint/explicit-function-return-type": "off",
-      "@typescript-eslint/no-use-before-define": [
-        "error",
-        "nofunc"
-      ],
       "@typescript-eslint/no-namespace": "off",
       "@typescript-eslint/no-non-null-assertion": "off",
-      "@typescript-eslint/interface-name-prefix": "off"
+      "@typescript-eslint/interface-name-prefix": "off",
+      "@typescript-eslint/no-empty-function": "off"
     },
     "overrides": [
       {
