--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "typewriter",
-  "version": "7.4.0",
+  "version": "7.4.1",
   "description": "A compiler for generating strongly typed analytics clients via Segment Protocols",
   "repository": "ssh://git@github.com/segmentio/typewriter.git",
   "homepage": "https://github.com/segmentio/typewriter",
@@ -68,7 +68,7 @@
     "js-yaml": "^3.13.1",
     "json-stable-stringify": "^1.0.1",
     "latest-version": "^5.1.0",
-    "lodash": "4.17.20",
+    "lodash": "~4.17.20",
     "node-machine-id": "^1.1.12",
     "prettier": "^1.17.0",
     "react": "^16.9.0",
