--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "@types/prompts": "2.0.0",
     "@typescript-eslint/eslint-plugin": "^4.9.0",
     "@typescript-eslint/parser": "^4.9.0",
+    "ajv": "^8.2.0",
     "copyfiles": "^2.1.0",
     "eslint": "^7.14.0",
     "eslint-config-prettier": "^6.15.0",
