--- a/package.json
+++ b/package.json
@@ -38,19 +38,19 @@
     "@typescript-eslint/eslint-plugin": "^4.9.0",
     "@typescript-eslint/parser": "^4.9.0",
     "copyfiles": "^2.1.0",
-    "eslint": "^7.14.0",
+    "eslint": "^7.30.0",
     "eslint-config-prettier": "^6.15.0",
     "eslint-plugin-prettier": "^3.1.4",
     "eslint-plugin-react": "^7.21.5",
-    "husky": "^2.1.0",
+    "husky": "^7.0.1",
     "jest": "^27.0.6",
     "jest-expect-message": "^1.0.2",
-    "lint-staged": "^8.1.7",
-    "np": "^5.0.1",
-    "snyk": "^1.250.0",
+    "lint-staged": "^11.0.0",
+    "np": "^7.5.0",
+    "snyk": "1.655.0",
     "ts-jest": "^27.0.3",
-    "ts-node": "^8.1.0",
-    "tsconfig-paths": "^3.8.0",
+    "ts-node": "^10.0.0",
+    "tsconfig-paths": "^3.10.0",
     "typewriter": "^7.4.1"
   },
   "dependencies": {
@@ -59,23 +59,23 @@
     "fuse.js": "^3.4.5",
     "got": "^9.6.0",
     "handlebars": "4.7.6",
-    "ink": "^2.5.0",
-    "ink-link": "^1.0.0",
-    "ink-select-input": "^3.1.2",
-    "ink-spinner": "^3.0.1",
-    "ink-text-input": "^3.2.1",
+    "ink": "^3.0.8",
+    "ink-link": "^2.0.0",
+    "ink-select-input": "^4.2.0",
+    "ink-spinner": "^4.0.2",
+    "ink-text-input": "^4.0.1",
     "joi": "^17.4.0",
-    "js-yaml": "^3.13.1",
+    "js-yaml": "^4.1.0",
     "json-stable-stringify": "^1.0.1",
     "latest-version": "^5.1.0",
-    "lodash": "4.17.20",
+    "lodash": "4.17.21",
     "node-machine-id": "^1.1.12",
-    "prettier": "^1.17.0",
+    "prettier": "^2.3.2",
     "react": "^17.0.1",
-    "semver": "^6.3.0",
-    "sort-keys": "^3.0.0",
-    "typescript": "^4.1.2",
-    "yargs": "^16.1.1"
+    "semver": "^7.3.5",
+    "sort-keys": "^5.0.0",
+    "typescript": "^4..3.5",
+    "yargs": "^17.0.1"
   },
   "files": [
     "dist",
