--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@types/json-schema": "^7.0.3",
     "@types/json-stable-stringify": "^1.0.32",
     "@types/lodash": "^4.14.123",
+    "@types/lodash.flow": "^3.5.6",
     "@types/node": "^11.13.6",
     "@types/prettier": "^1.16.3",
     "@types/prompts": "2.0.0",
