--- a/package.json
+++ b/package.json
@@ -83,7 +83,7 @@
     "react": "^17.0.2",
     "semver": "^7.3.5",
     "sort-keys": "^5.0.0",
-    "typescript": "^4..3.5",
+    "typescript": "^4.3.5",
     "yargs": "^17.0.1"
   },
   "files": [
