--- a/package.json
+++ b/package.json
@@ -34,7 +34,9 @@
     "node-machine-id": "^1.1.12",
     "quicktype-core": "^6.0.71",
     "semver": "^7.3",
+    "sort-keys": "^4.2.0",
     "terminal-link": "^2",
+    "typescript": "^4.7.4",
     "yaml": "^2.1.0"
   },
   "devDependencies": {
@@ -63,8 +65,7 @@
     "oclif": "^3.0",
     "shx": "^0.3",
     "ts-node": "^10.7",
-    "tslib": "^2.4",
-    "typescript": "^4.7.4"
+    "tslib": "^2.4"
   },
   "oclif": {
     "bin": "typewriter",
@@ -76,9 +77,9 @@
     "description": "A compiler for generating strongly typed analytics clients via Segment Protocols",
     "hooks": {
       "init": [
-        "./src/hooks/prerun/load-languages"
+        "./dist/hooks/prerun/load-languages"
       ],
-      "postrun": "./src/hooks/postrun/telemetry"
+      "postrun": "./dist/hooks/postrun/telemetry"
     }
   },
   "scripts": {
