--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
     "semver": "^7.3",
     "sort-keys": "^4.2.0",
     "terminal-link": "^2",
-    "typescript": "^4.7.4",
+    "typescript": "*",
     "yaml": "^2.1.0"
   },
   "devDependencies": {
@@ -55,13 +55,18 @@
     "@types/node": "^16.9.4",
     "@types/npmcli__ci-detect": "^2.0.0",
     "@types/semver": "^7.3.9",
+    "@typescript-eslint/eslint-plugin": "^5.0.0",
     "chai": "^4",
     "copyfiles": "^2.4.1",
-    "eslint": "^8",
+    "eslint": "^8.0.1",
     "eslint-config-oclif": "^4",
     "eslint-config-oclif-typescript": "^1.0.2",
+    "eslint-config-standard-with-typescript": "^22.0.0",
     "eslint-config-twilio": "^2.0.0",
     "eslint-config-twilio-ts": "^2.0.0",
+    "eslint-plugin-import": "^2.25.2",
+    "eslint-plugin-n": "^15.0.0",
+    "eslint-plugin-promise": "^6.0.0",
     "globby": "^11",
     "jest": "^28",
     "mocha": "^9",
@@ -70,6 +75,7 @@
     "stdout-stderr": "^0.1.13",
     "ts-jest": "^28",
     "ts-node": "^10.7",
+    "ts-jest": "^28",
     "tslib": "^2.4"
   },
   "oclif": {
@@ -89,8 +95,8 @@
   },
   "scripts": {
     "build": "shx rm -rf dist && tsc && copyfiles --up 1 \"src/**/*.hbs\" dist",
-    "lint": "eslint . --ext .ts --config .eslintrc",
-    "lint:fix": "eslint lint -- --fix",
+    "lint": "eslint",
+    "lint:fix": "eslint --fix",
     "postpack": "shx rm -f oclif.manifest.json",
     "posttest": "yarn lint",
     "prepack": "yarn build && oclif manifest && oclif readme",
