--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,17 +1,20 @@
 {
   "compilerOptions": {
-    "declaration": true,
-    "allowSyntheticDefaultImports": true,
+    // https://www.npmjs.com/package/@tsconfig/node14
+    "lib": ["es2020"],
+    "module": "commonjs",
+    "target": "es2020",
+    "strict": true,
     "esModuleInterop": true,
+    "skipLibCheck": true,
+    "forceConsistentCasingInFileNames": true,
+    "moduleResolution": "node",
+
+    "allowSyntheticDefaultImports": true,
     "resolveJsonModule": true,
     "importHelpers": true,
-    "moduleResolution": "node",
     "outDir": "dist",
     "rootDir": "src",
-    "module": "CommonJS",
-    "strict": true,
-    "target": "es2019",
-    "skipLibCheck": true
   },
   "include": ["src/**/*"],
   "exclude": ["src/languages/templates/**/*"]
