--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -13,14 +13,18 @@ jobs:
       with:
         workflow_id: ${{ github.event.workflow.id }}
   build-and-test:
+    name: "Test (Node.js v${{ matrix.node-version }})"
     needs: cancel_previous
     runs-on: 'ubuntu-latest'
+    strategy:
+      matrix:
+        node-version: [ 14, 16, 18 ]
     steps: 
-      - uses: actions/checkout@v2
-      - uses: actions/setup-node@v2
+      - uses: actions/checkout@v3
+      - uses: actions/setup-node@v3
         with:
-          node-version: '16'
-          cache: 'yarn'
+          node-version: ${{ matrix.node-version }}
+          cache: yarn
       - name: Install
         run: yarn install --frozen-lockfile
       - name: Lint
