--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
   },
   "devDependencies": {
     "@oclif/test": "^2.1",
+    "@segment/analytics-next": "^1.51.6",
     "@segment/analytics-react-native": "^2.2.1",
     "@types/analytics-node": "^3.1.9",
     "@types/chai": "^4",
