--- a/package.json
+++ b/package.json
@@ -101,6 +101,7 @@
     "posttest": "yarn lint",
     "prepack": "yarn build && oclif manifest && oclif readme",
     "test": "jest --runInBand",
+    "test:typedef": "npx ts-node src/__tests__/ts-typedef-tests/run-tests.ts",
     "version": "oclif readme && git add README.md"
   },
   "engines": {
