--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
   },
   "devDependencies": {
     "@oclif/test": "^2.1",
+    "@segment/analytics-next": "^1.51.6",
     "@segment/analytics-react-native": "^2.2.1",
     "@types/analytics-node": "^3.1.9",
     "@types/chai": "^4",
@@ -99,7 +100,8 @@
     "postpack": "shx rm -f oclif.manifest.json",
     "posttest": "yarn lint",
     "prepack": "yarn build && oclif manifest && oclif readme",
-    "test": "jest --runInBand",
+    "test": "yarn test:typedef && jest --runInBand",
+    "test:typedef": "npx ts-node src/__tests__/ts-typedef-tests/run.ts",
     "version": "oclif readme && git add README.md"
   },
   "engines": {
