--- a/package.json
+++ b/package.json
@@ -93,8 +93,8 @@
     }
   },
   "scripts": {
-    "build": "shx rm -rf dist && tsc && copyfiles --up 1 \"src/**/*.hbs\" dist",
-    "build:telementry": "npm run build && ./bin/run -m=prod",
+    "build": "shx rm -rf dist && tsc && copyfiles --up 1 \"src/**/*.hbs\" dist && npm run build:telemetry",
+    "build:telemetry": "./bin/run -m=prod",
     "lint": "eslint",
     "lint:fix": "eslint --fix",
     "postpack": "shx rm -f oclif.manifest.json",
